# sth

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  compile_test.bash  package.bash  run-tests.sh  shell.nix  sth.c  sth.h  test_compile.bash
allocators/: allocators.c  allocators.h  arena.c  arena.h  mempool.c  mempool.h
base/: base.h  dynamic_array.h
cmake/: MimallocImport.cmake
ds/: ds.h  dynamic_array.h  queue.h  ring_buffer.h
encoding/: base64.c  base64.h  encoding.c  encoding.h
include/sth/: debug.h  malloc.h  memory.h  mutex.h  string.h
io/: filesystem.h  filesystem_unix.c  filesystem_windows.c  io.c  io.h
os/: filesystem.h  filesystem_unix.c  filesystem_windows.c  memory.h  memory_unix.c  memory_windows.c  os.c  os.h
src/: CMakeLists.txt  MimallocImport.cmake  malloc.c  memory.c  string.c
test/: CMakeLists.txt  main.c  malloc.h
tests/: test.c  test_memmove_fast.c
